# am_bot

./: .env_SAMPLE  AGENTS.md  Dockerfile  README.md  am_bot_deployment.yaml  deployment.yaml  entrypoint.sh  pyproject.toml  requirements.txt  run.py  tox.ini
.github/workflows/: codeql-analysis.yml  docker-pr.yml  python.yml
am_bot/: __init__.py  bot.py  constants.py  logging_config.py  ses.py
am_bot/cogs/: assignable_roles.json  command_responses.json  greetings.py  invite_response.py  quarantine.py  responses.py  role_assignment.py  server_stats.py  spam.py  starboard.py  workshop.py
helm/am-bot/: Chart.yaml  values.yaml
helm/am-bot/templates/: _helpers.tpl  deployment.yaml  secrets.yaml
tests/: __init__.py  conftest.py  test_bot.py  test_greetings.py  test_invite_response.py  test_quarantine.py  test_responses.py  test_role_assignment.py  test_server_stats.py  test_ses.py  test_starboard.py  test_workshop.py
