[build-system]
requires = ["setuptools>=70.0"]

[project]
name = "am_bot"
authors = [
    {name = "ARKModding", email = "no-reply@arkmodding.net"},
]
requires-python = ">=3.10"
readme = "README.md"
classifiers = []
dynamic = [
    "version",
    "description",
    "dependencies",
]

[project.optional-dependencies]
dev = [
    "bandit",
    "black",
    "coverage",
    "diff-cover",
    "isort",
    "pre-commit",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff",
]
test = [
    "tox",
]

[project.urls]
Source = "https://github.com/ARKModding/am_bot"

[tool.bandit]
exclude_dirs = [
    "tests",
]

[tool.black]
line-length = 79
target-version = ['py313']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 79
lines_after_imports = 2
skip = [".tox", "venv", ".venv"]

[tool.ruff]
exclude = [
    "venv",
    ".venv",
    "__init__.py",
]
line-length = 79

[tool.ruff.lint]
select = [
    "B",
    "C",
    "E",
    "F",
    "W",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
relative_files = true
source = ["am_bot"]
omit = ["tests/*", "am_bot/logging_config.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
show_missing = true

[tool.setuptools]
packages = ["am_bot", "am_bot.cogs"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
description = {file = ["README.md"]}
version = {attr = "am_bot.__version__"}
